waiting was reworked and fixed