@@ -3,19 +3,22 @@ import akka.actor.ActorRef;
 import akka.actor.Props;
 
 import java.util.ArrayList;
+import java.util.LinkedList;
 import java.util.List;
 
 public class CarPlaceActor extends AbstractActor {
 
-    private List<ActorRef> waitingCars;
+    private LinkedList<ActorRef> waitingCars;
     private ActorRef parkedCar;
+    private String name;
 
-    public CarPlaceActor(){
-        this.waitingCars = new ArrayList<>();
+    public CarPlaceActor(String name){
+        this.name = name;
+        this.waitingCars = new LinkedList<>();
     }
 
-    public static Props props() {
-        return Props.create(CarPlaceActor.class);
+    public static Props props(String name) {
+        return Props.create(CarPlaceActor.class, name);
     }
 
     public Receive createReceive() {
@@ -29,7 +32,7 @@ public class CarPlaceActor extends AbstractActor {
                 })
                 .matchEquals(Command.I_GO_AWAY, r -> {
                     cleanParkPlace();
-                    System.out.println("Is Free: " + getSelf());
+                    System.out.println("Is Free: " + name);
                     notifyAnotherCars();
                 })
                 .build();
@@ -37,6 +40,7 @@ public class CarPlaceActor extends AbstractActor {
 
     public void checkPlaces() {
 //        System.out.println(getSelf().path() + " was asked for place by " + getSender().path());
+//        System.out.println("Place was asked by: " + getSender() + "    and:   " + parkedCar);
         if (parkedCar == null) {
             parkedCar = getSender();
             getSender().tell(Command.YOU_CAN_TAKE_PLACE, getSelf());
@@ -50,9 +54,16 @@ public class CarPlaceActor extends AbstractActor {
     }
 
     public void notifyAnotherCars() {
-        if (waitingCars.size() > 0) {
-            parkedCar = waitingCars.get(0);
-            waitingCars.get(0).tell(Command.YOU_CAN_TAKE_PLACE, getSelf());
+        for (int i = 0; i < waitingCars.size(); i++) {
+            if (waitingCars.getFirst().isTerminated()) {
+                waitingCars.removeFirst();
+            } else {
+                parkedCar = waitingCars.getFirst();
+                waitingCars.getFirst().tell(Command.YOU_CAN_TAKE_PLACE, getSelf());
+                waitingCars.removeFirst();
+                return;
+            }
         }
     }
+
 }
